# Japanese_OCR_Translator

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LEARNINGS.md  README.md  ROADMAP.md  config.py  docker-compose.yml  main.py  preprocessing.py  pyproject.toml  requirements.txt
database/: database.py  models.py
prompts/: translate.txt
