[project]
name = "japanese-ocr-translator"
version = "0.1.0"
description = ""
authors = [
    {name = "Binardino",email = "langlois.robin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "manga-ocr (>=0.1.14,<0.2.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "google-generativeai (>=0.8.6,<0.9.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "fugashi (>=1.5.2,<2.0.0)",
    "jamdict (>=0.1a11.post2,<0.2)",
    "numpy (>=2.4.4,<3.0.0)",
    "watchdog (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
