[project]
name = "japanese-ocr-translator"
version = "0.1.0"
description = "Japanese OCR detection & translator from video game console screen images"
authors = [
    {name = "Binardino",email = "langlois.robin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "manga-ocr>=0.1.14",
    "opencv-python>=4.13.0",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.2",
    "fugashi>=1.5.2",
    "jamdict>=0.1a11.post2",
    "numpy>=2.4.4",
    "watchdog>=6.0.0",
    "google-genai>=1.70.0",
    "super-image>=0.2.0",
    "ipykernel>=7.3.0",
    "ollama>=0.6.2",
]

[tool.uv]
package = false
